Se adapto la vista de la aplicación para una Tablet

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </div>
         </section>
         <section class="rectangle">
-            <textarea class="show-msn" cols="20" rows="10"></textarea>
-            <div>
+            <textarea class="show-msn" cols="19" rows="10"></textarea>
+            <div class="copy">
                 <button class="btn-copy">Copiar</button>
             </div>
         </section>
