--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400&display=swap" rel="stylesheet">
@@ -16,18 +17,18 @@
     </header>
     <main>
         <section class="main-section">
-            <textarea class="msn" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+            <textarea class="msn" id="txt" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
             <div>
                 <img class="img-warning" src="./img/Vector.png" alt="">
                 <h6 class="warning">Solo letras minúsculas y sin acentos</h6>
             </div>
             <div class="btn">
-                <button class="btn-encriptar">Encriptar</button>
-                <button class="btn-desencriptar">Desencriptar</button>
+                <button class="btn-encriptar" onclick="btnEncriptar()">Encriptar</button>
+                <button class="btn-desencriptar" onclick="btnDesencriptar()">Desencriptar</button>
             </div>
         </section>
         <section class="rectangle">
-            <textarea class="show-msn" cols="19" rows="10"></textarea>
+            <textarea class="show-msn" id="showTxt" cols="19" rows="10"></textarea>
             <div class="copy">
                 <button class="btn-copy">Copiar</button>
             </div>
