Agrego la función del botón copiar

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="rectangle">
             <textarea class="show-msn" id="showTxt" cols="19" rows="10"></textarea>
             <div class="copy">
-                <button class="btn-copy">Copiar</button>
+                <button class="btn-copy" id="copyBtn" onclick="btnCopy()">Copiar</button>
             </div>
         </section>
     </main>
